--- a/usa/pom.xml
+++ b/usa/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>spring-data-commons</artifactId>
             <version>3.1.0</version>
         </dependency>
+
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.11.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
