--- a/usa/pom.xml
+++ b/usa/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.11.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>3.9.2</version>
+		</dependency>
     </dependencies>
 
 	<build>
